# rain

./: .gitignore  .readthedocs.yaml  Makefile  README.md  __init__.py  pyproject.toml  rain.py  requirements.txt  tests.py
cli/: __init__.py  main.py
core/: __init__.py  collector.py  config.py  display.py  robust_collector.py
docs/: api.rst  changelog.md  conf.py  configuration.md  contributing.md  contributing.rst  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  quickstart.md  requirements.txt  usage.md  user_guide.rst
docs/api/: collector.md  config.md  display.md  exceptions.md  index.md
utils/: __init__.py  exceptions.py  helpers.py  logger.py
