[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rain"
version = "1.0.0"
description = "A comprehensive system information CLI tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Desenyon", email = "desenyon@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "netifaces>=0.11.0",
    "requests>=2.28.0",
    "distro>=1.8.0",
    "GPUtil>=1.4.0",
    "py-cpuinfo>=9.0.0",
    "speedtest-cli>=2.1.3",
    "uptime>=3.0.1",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
rain = "rain.cli.main:main"

[project.urls]
Homepage = "https://github.com/desenyon/rain"
Repository = "https://github.com/desenyon/rain"
Documentation = "https://raindsx.readthedocs.io"
"Bug Tracker" = "https://github.com/desenyon/rain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rain*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
